# MIL_toolbox

./: .gitignore  README.md  pyproject.toml
src/mil_toolbox/: __init__.py
src/mil_toolbox/data/: __init__.py  collate.py  datamodule.py  fold_manager.py
src/mil_toolbox/data/datasets/: __init__.py  base.py  dummy.py  embedding.py  wsi.py
src/mil_toolbox/inference/: __init__.py  aggregator.py  predictor.py  preview.py  slide_embedding.py  titan.py
src/mil_toolbox/models/: __init__.py  linear_probe.py  mil_model.py
src/mil_toolbox/train/: __init__.py  cross_validator.py
src/mil_toolbox/training/: run.py  trainer.py
src/mil_toolbox/utils/: __init__.py  metrics.py  plot_training_log.py  preview.py  umap.py
test/: dataset.py  hdf5.py  linear_train.py  mil_linear_pipeline.py  train_inference.py  umap_strategies.py
